[package]
name = "matching_be"
version = "0.1.0"
edition = "2024"
description = "Order matching engine for trading systems"
repository = "https://github.com/bikbov/matching_be"
keywords = ["trading", "finance", "matching-engine", "exchange", "orders"]
categories = ["finance", "algorithms"]

[dependencies]
axum = { version = "0.8.3", features = ["ws", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }


[lints.clippy]
all = "warn"
correctness = "warn"
suspicious = "warn"
style = "warn"
complexity = "warn"
perf = "warn"
pedantic = "warn"
nursery = "warn"
